Trying to fix phone rendering (front page two buttons on narrow viewport)

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -27,6 +27,10 @@ ul.nav {
     font-size: 11px;
 }
 
+.intro-text .btn {
+    margin: 3px;
+}
+
 .navbar-brand>img {
     display: inline;
 }
